K8s/api/GKE/01-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: weather-api-deployment
  labels:
    app: weather-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: weather-api
  template:
    metadata:
      labels:
        app: weather-api
    spec:
      containers:
      - name: weather-api
        image: us-central1-docker.pkg.dev/weather-4cee/weather-4cee-repo/weather_api:1.0
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
        resources:
          requests:
            cpu: "250m"
            memory: "512Mi"
