K8s/api/GKE/03-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: weather-api-ingress
  annotations:
    kubernetes.io/ingress.class: gce
spec:
  rules:
  - host: weather.localtest.me
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: weather-api-service
            port:
              number: 80
